...
        android:layout_height="64dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <CheckBox
            android:id="@+id/checkbox_select_all"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pilih_semua"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="24dp"/>

        <Button
            android:id="@+id/btn_pinjam"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/pinjam"
            android:textSize="16sp"
            android:textColor="@android:color/white"
            android:background="@drawable/rounded_eraser_button"
...
